# RemoteCar

./: .gitignore
joycon/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
joycon/components/: component.cmake
joycon/components/ali-iot/: CMakeLists.txt
joycon/components/ali-iot/include/: sign_api.h
joycon/main/: CMakeLists.txt  bsp_display.c  bsp_dns.c  bsp_joystick.c  bsp_key_fsm.c  main.c
joycon/main/include/: bsp_config.h  bsp_display.h  bsp_dns.h  bsp_joystick.h  bsp_key_fsm.h
joycon/main/res/: root.html
